kubernetes/oracle-db-scraper-deployment.yaml
## Copyright (c) 2021, 2026, Oracle and/or its affiliates.
## Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oracle-db-scraper
  namespace: scraper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oracle-db-scraper
  template:
    metadata:
      labels:
        app: oracle-db-scraper
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: oracle-db-scraper
        image: oracledb-performance-scraper:local
        imagePullPolicy: IfNotPresent
        command: ["/oracledb_performance_scraper"]
        args: ["--config.file=/config/oracle-db-scraper-config.yaml"]
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          readOnlyRootFilesystem: true
        volumeMounts:
          - name: scraper-config
            mountPath: /config
            readOnly: true
          - name: tns-admin
            mountPath: /oracle/tns_admin
            readOnly: true
          - name: tmp
            mountPath: /tmp
          # uncomment and customize the next item if you want to provide custom metrics definitions
          #- name: config-volume
          #  mountPath: /oracle/scraper/txeventq-metrics.toml
          #  subPath: txeventq-metrics.toml
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"  
        ports:
        - containerPort: 9161
      restartPolicy: Always
      volumes:
        - name: tns-admin
          configMap:
            name: db-metrics-tns-admin
        - name: scraper-config
          configMap:
            name: oracle-db-scraper-config
        - name: tmp
          emptyDir: {}
        # uncomment and customize the next item if you want to provide custom metrics definitions
        #- name: config-volume
        #  configMap:
        #    name: db-metrics-txeventq-scraper-config
