kubernetes/oracle-db-scraper-service.yaml
## Copyright (c) 2021, 2023, Oracle and/or its affiliates.
## Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl/
apiVersion: v1
kind: Service
metadata:
  name: oracle-db-scraper-svc
  namespace: scraper
  labels:
    app: oracle-db-scraper
    release: stable
spec:
  type: ClusterIP
  ports:
    - port: 9161
      name: health
      targetPort: 9161
  selector:
    app: oracle-db-scraper
